# cdse-stac-api

./: .gitignore  README.md  pyproject.toml
cdse-stac-api/: cdse_data_access.ipynb
